# send_glitch

./: Cargo.toml  README.md  justfile  send.test.json
.github/workflows/: rust.yml
src/: main.rs
