[package]
name = "send_glitch"
version = "0.4.0"
authors = ["blakehawkins"]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Read jsonlines from stdin, write messages to matrix.org"
homepage = "https://github.com/blakehawkins/send_glitch"
repository = "https://github.com/blakehawkins/send_glitch"
readme = "README.md"

[dependencies]
oops = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
tokio = { version = "1.47", features = ["full"] }
urlencoding = "2.1"
stdinix = "0.3"
matrix-sdk = "0.16"
eyre = "0.6"
